use an unify function iterface generics + start hiding private/package state in x509store